<resources>
    <string name="app_name">Lat2-AKB2-10116060-MuhammadHafizhB</string>
    <string name="todo">todo</string>
    <string name="doesn_t_have_account">doesn\'t have account ?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="or">OR</string>
    <string name="login">Login</string>
    <string name="connect_with_facebook">Connect with facebook</string>
    <string name="header">header</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="male">   Male</string>
    <string name="female">   Female</string>
    <string name="retype_password">Retype Password</string>
    <string name="personal">Personal</string>
    <string name="organization">Organization</string>
    <string name="home_address">Home Address</string>
    <string name="default_location">Default Location</string>
    <string name="agree_with_terms_and_conditions">   Agree with Terms and Conditions</string>
    <string name="register">Register</string>
    <string name="almost_there">Almost There</string>
    <string name="bawah_ty">Thankyou for registering with us. One more\nstep, you need to check your email\n to active your account</string>
    <string name="vertifikasi">Verify</string>
    <string name="vya">Verify your Account</string>
    <string name="we_have_send_verification_code_to_your_email">We have send verification code to your email</string>
    <string name="enter_verification_code_here">enter verification code here...</string>
    <string name="send">Send</string>
    <string name="doesn_t_get_the_code">doesn\'t get the code ? </string>
    <string name="resend">Resend</string>
    <string name="blood_type">Blood Type</string>
    <string name="reshus">Reshus</string>
    <string name="job">job</string>
    <string name="nama">Muhammad Hafizh Budiman</string>
    <string name="blood_type_b">Blood Type : B</string>
    <string name="_75">75</string>
    <string name="_330">330</string>
    <string name="_100">100</string>
    <string name="blood_give">BLOOD GIVE</string>
    <string name="blood_received">BLOOD RECEIVED</string>
    <string name="thanks">THANKS</string>
    <string name="search_donor">Search Donor</string>
    <string name="blood_needed">Blood Needed</string>
    <string name="message">Message</string>
    <string name="donor_history">Donor History</string>
    <string name="_4_users_need_blood">4 users need blood</string>
    <string name="_5_gives_2_received">5 Gives 2 Received</string>
    <string name="_5_new_message">5 New Message</string>
    <string name="search_donor_near_you">Search donor near you</string>
</resources>
