<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/editText9"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="272dp"
        android:autofillHints=""
        android:drawableEnd="@drawable/ic_arrow_dropdown"
        android:ems="10"
        android:hint="@string/blood_type"
        android:inputType="textPersonName"
        tools:targetApi="o" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_header" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="11dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_header_back" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="21dp"
        android:textColor="@color/putih"
        android:text="@string/register" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="79dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:autofillHints="" tools:targetApi="o"/>

    <EditText
        android:id="@+id/editText5"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="131dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="" tools:targetApi="o"/>

    <EditText
        android:id="@+id/editText7"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="176dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        tools:targetApi="o" />

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="230dp"
        android:text="@string/male" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="242dp"
        android:layout_marginTop="230dp"
        android:text="@string/female" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="254dp"
        android:layout_marginTop="276dp"
        android:autofillHints=""
        android:drawableEnd="@drawable/ic_arrow_dropdown"
        android:ems="10"
        android:hint="@string/reshus"
        android:inputType="textPersonName"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText18"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="354dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:targetApi="o" />


    <EditText
        android:id="@+id/editText19"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="300dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        tools:targetApi="o" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="262dp"
        android:text="@string/personal" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="240dp"
        android:layout_marginBottom="261dp"
        android:text="@string/organization" />

    <EditText
        android:id="@+id/editText20"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="206dp"
        android:autofillHints=""
        android:drawableEnd="@drawable/ic_arrow_dropdown"
        android:ems="10"
        android:hint="@string/job"
        android:inputType="textPersonName"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText21"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="153dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/home_address"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/editText22"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="102dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:drawableEnd="@drawable/ic_blood_needed_location"
        android:hint="@string/default_location"
        android:autofillHints="" tools:targetApi="o" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="70dp"
        android:drawableStart="@drawable/ic_register_terms_on"
        android:text="@string/agree_with_terms_and_conditions" />

    <Button
        android:id="@+id/button3"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="13dp"
        android:background="@drawable/tomboldaftar"
        android:text="@string/register" />


</RelativeLayout>