<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tema"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="122dp"
        android:contentDescription="@string/todo"
        android:foregroundGravity="center"
        android:layout_centerVertical="true"
        app:srcCompat="@drawable/ic_welcome_logo" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="376dp"
        android:autofillHints=""
        android:backgroundTint="@color/putih"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColorHint="@color/putih"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="315dp"
        android:backgroundTint="@color/putih"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="@color/putih"
        tools:targetApi="o" />

    <Button
        android:id="@+id/button"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="246dp"
        android:background="@drawable/tombol"
        android:text="@string/login"
        android:textColor="@color/putih" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="193dp"
        android:layout_marginBottom="215dp"
        android:text="@string/or"
        android:textColor="@color/putih" />

    <Button
        android:id="@+id/button2"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="151dp"
        android:background="@drawable/tombol"
        android:drawableStart="@drawable/ic_welcome_fb_login"
        android:text="@string/connect_with_facebook"
        android:textColor="@color/putih" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="118dp"
        android:layout_marginBottom="118dp"
        android:text="@string/doesn_t_have_account"
        android:textColor="@color/putih" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="118dp"
        android:text="@string/register"
        android:textColor="@color/putih"
        android:textStyle="bold" />
</RelativeLayout>