<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity" >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="279dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_header_profile" tools:targetApi="donut" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="367dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_side_menu" tools:targetApi="donut" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/todo"
        android:layout_marginEnd="9dp"
        app:srcCompat="@drawable/ic_notification" tools:targetApi="donut" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/myPict"
        android:layout_width="match_parent"
        android:layout_height="166dp"

        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="161dp"
        android:src="@drawable/sada" />

    <TextView
        android:id="@+id/tvMy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/myPict"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:text="@string/nama"
        android:textColor="@color/tema"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/tvMy1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/myPict"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="27dp"
        android:gravity="center"
        android:text="@string/blood_type_b"
        android:textSize="20sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="341dp"
        android:background="?android:attr/listDivider"
        android:visibility="visible"
        tools:targetApi="lollipop" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="245dp"
        android:background="?android:attr/listDivider"
        android:visibility="visible"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="285dp"
        android:text="@string/_75"
        android:textColor="@color/tema"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="177dp"
        android:layout_marginBottom="285dp"
        android:text="@string/_100"
        android:textColor="@color/tema"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="309dp"
        android:layout_marginBottom="285dp"
        android:text="@string/_330"
        android:textColor="@color/tema"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="259dp"
        android:text="@string/blood_give" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="164dp"
        android:layout_marginBottom="257dp"
        android:text="@string/blood_received" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="312dp"
        android:layout_marginBottom="258dp"
        android:text="@string/thanks" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="89dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="59dp"
        android:layout_marginBottom="152dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_search_donor" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="92dp"
        android:layout_height="79dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="58dp"
        android:layout_marginBottom="42dp"
        app:srcCompat="@drawable/ic_message"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="89dp"
        android:layout_height="87dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="151dp"
        app:srcCompat="@drawable/ic_donor_history"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="87dp"
        android:layout_height="78dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="43dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_blood_needed" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="65dp"
        android:layout_marginBottom="134dp"
        android:text="@string/search_donor"
        android:textColor="@color/hitam"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="292dp"
        android:layout_marginBottom="134dp"
        android:text="@string/blood_needed"
        android:textColor="@color/hitam"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="78dp"
        android:layout_marginBottom="22dp"
        android:text="@string/message"
        android:textColor="@color/hitam"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="295dp"
        android:layout_marginBottom="22dp"
        android:text="@string/donor_history"
        android:textColor="@color/hitam"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="122dp"
        android:text="@string/search_donor_near_you"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="289dp"
        android:layout_marginBottom="7dp"
        android:text="@string/_5_gives_2_received"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="62dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_5_new_message"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="285dp"
        android:layout_marginBottom="125dp"
        android:text="@string/_4_users_need_blood"
        android:textSize="12sp" />


</RelativeLayout>