<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tema"
    tools:context=".AlmostActivity" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="151dp"
        android:layout_marginTop="228dp"
        android:text="@string/almost_there"
        android:textColor="@color/putih"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="101dp"
        android:layout_marginTop="273dp"
        android:gravity="center"
        android:text="@string/bawah_ty"
        android:textColor="@color/putih" />

    <Button
        android:id="@+id/button4"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="280dp"
        android:background="@drawable/tombol"
        android:text="@string/vertifikasi"
        android:textColor="@color/putih" />
</RelativeLayout>